terraform-rds/security.tf
resource "aws_security_group" "bastion_sec_gp" {
  name        = var.bastion_sec
  description = "Allow SSH connection from Anywhere"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(local.common_tags, {
    Name = "${var.bastion_sec}"
    }
  )
}

resource "aws_security_group" "rds_sec_gp" {
  name        = var.rds_sec
  description = "Allow RDS from only Bastion Host"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_sec_gp.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(local.common_tags, {
    Name = "${var.rds_sec}"
    }
  )
}
